<resources>
    <string name="app_name">Football VRI</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="favourites">Favourites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="match_date">Match Date</string>
    <string name="club_a">Club A</string>
    <string name="_0">0</string>
    <string name="vs">vs</string>
    <string name="club_b">Club B</string>

    <string name="favorites">Favourites</string>
    <string name="toast_fav_add">Added to favourite</string>
    <string name="toast_fav_remove">Removed from favourite</string>
    <string name="search">Search</string>


    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
</resources>
