<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/match_list_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginBottom="@dimen/spacing16dp">
    <TextView
        android:id="@+id/match_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_date"
        android:textColor="@color/colorPrimary"
        android:layout_margin="@dimen/spacing8dp"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/name_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:textAlignment="textEnd"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/font_small"
            android:text="@string/club_a"/>
        <TextView
            android:id="@+id/score_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textSize="@dimen/font_small"
            android:text="@string/_0"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textAlignment="center"
            android:textSize="@dimen/font_small"
            android:text="@string/vs"/>
        <TextView
            android:id="@+id/score_away"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textSize="@dimen/font_small"
            android:text="@string/_0"/>
        <TextView
            android:id="@+id/name_away"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:textAlignment="textStart"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/font_small"
            android:text="@string/club_b"/>
    </LinearLayout>
</LinearLayout>
